 * Units:
   * Balancing changes:
     * Gave the Goblin Pillager the same bite attack as the Wolf Rider.
   * Added "border" parameter to [terrain_mask] that overlays on the border
     in addition to the playable map area. The used mask must have the same
     border_size as the map (i.e. currently 1), else this will be ignored.
   * Restore x1, y1, x2, and y2 after events fired from events.
 * Miscellaneous and bug fixes:
   * fixed addon update version logic (patch #1110)

Version 1.5.5:
 * Campaigns:
   * A new experimental gold carryover system is now supported in Heir to the
     Throne, Sceptre of Fire and Descent into Darkness: the choice appears in
     the difficulty level menu when starting the campaign.
   * Son of the Black Eye:
     * New portraits for Al'Brock, Flar'Tar and Howgarth.
   * Two Brothers:
     * Rewrite to include story screens by Stefan
     * Improved scenario texts and dialogs
 * Editor2:
   * Added editor-specific settings dialog
   * Lighting setting similar to that of old editor, with presets from a
     (hardcoded) list of time_of_days. Can change the settings and see the
     effects without having to close the settings dialog. The preferences
     are shared with the old editor (FR #11408 / Debian bug #458305).
   * Auto update transitions option is stored in the preferences
   * Removed map flipping
   * Added clipboard flipping
   * Command line: added "--load FILE" support to "-e" (FR #12299)
 * Graphics:
   * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
 * Music and sound effects:
   * New music track "Heroes Rite" by Doug Kaufman.
   * New music track "The Deep Path" by Gianmarco Leone.
 * Language and i18n:
   * Fixed a problem under Windows where the locales detection didn't
     work; all languages are now enabled for Windows.
   * Made it possible to translate ability names according to the
     unit's gender (feature #11982). Not yet activated for unit type.