@@ -65,6 +65,9 @@ public:
 	/** Inherited from tcontrol. */
 	unsigned get_state() const { return state_; }
 
+	/** Inherited from tcontrol. */
+	bool does_block_easy_close() const { return true; }
+
 	/***** ***** ***** setters / getters for members ***** ****** *****/
 
 	void set_retval(const int retval) { retval_ = retval; }
