@@ -141,6 +141,7 @@ void ttoggle_button::set_state(const tstate state)
 {
 	if(state != state_) {
 		state_ = state;
+		set_block_easy_close(get_visible() && get_active());
 		set_dirty(true);
 	}
 }
