@@ -45,6 +45,9 @@ public:
 	/** Inherited from tcontrol. */
 	unsigned get_state() const { return 0; }
 
+	/** Inherited from tcontrol. */
+	bool does_block_easy_close() const { return false; }
+
 private:	
 	/** Inherited from tcontrol. */
 	const std::string& get_control_type() const 
